# rust-pocket

./: Cargo.toml
examples/: add.rs  auth.rs  modify.rs  retrieve.rs
src/: client.rs  errors.rs
