[package]
name = "pocket"
version = "0.1.3"
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "Simple bindings for Pocket API (https://getpocket.com)"
homepage = "https://github.com/kstep/rust-pocket"
repository = "https://github.com/kstep/rust-pocket.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4"
hyper = { version = "0.14", features = ["http1", "client"] }
hyper-tls = "0.5"
url = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
url_serde = "0.2.0"
mime = "0.3.16"
bytes = "1.0"
futures = "0.3.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.20"

[dev-dependencies]
log = "0.3.5"
